# nekoo-screenshot

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
.github/workflows/: release.yml
installer/: setup.iss
src/: capture.rs  main.cpp  main.rs  overlay.cpp  resource.h  resource.rc  settings.cpp  settings.h  settings.rs  toast.cpp  toast.h  upload.cpp  upload.h  upload.rs
