[package]
name = "nekoo-screenshot"
version = "1.0.0"
edition = "2021"
authors = ["Nekoo Team"]
description = "Fast screenshot tool that uploads to nekoo.ru"
license = "MIT"
repository = "https://github.com/KupQ/nekoo-screenshot"

[dependencies]
screenshots = "0.8"
reqwest = { version = "0.11", features = ["multipart", "blocking"] }
arboard = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
dirs = "5.0"
rdev = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[[bin]]
name = "nekoo-screenshot"
path = "src/main.rs"
