[package]
name = "nekoo-screenshot"
version = "1.0.8"
edition = "2021"
authors = ["Nekoo Team"]
description = "Fast screenshot tool that uploads to nekoo.ru"
license = "MIT"
repository = "https://github.com/KupQ/nekoo-screenshot"

[dependencies]
scrap = "0.5"
reqwest = { version = "0.11", default-features = false, features = ["multipart", "blocking", "rustls-tls"] }
arboard = "3.3"
image = "0.24"

[[bin]]
name = "nekoo-screenshot"
path = "src/main.rs"
